Additional modelling and graphs

--- a/Data Collection and Cleaning.ipynb
+++ b/Data Collection and Cleaning.ipynb
@@ -64,6 +64,76 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "b95d4497",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Morning Consult                                    644\n",
+       "Rasmussen Reports/Pulse Opinion Research           320\n",
+       "YouGov                                             139\n",
+       "Ipsos                                               76\n",
+       "HarrisX                                             44\n",
+       "Global Strategy Group/GBAO (Navigator Research)     32\n",
+       "Marist College                                      26\n",
+       "Léger                                               24\n",
+       "RMG Research                                        24\n",
+       "American Research Group                             21\n",
+       "IBD/TIPP                                            20\n",
+       "Quinnipiac University                               18\n",
+       "Gallup                                              16\n",
+       "Echelon Insights                                    14\n",
+       "AP-NORC                                             14\n",
+       "Monmouth University                                 12\n",
+       "McLaughlin & Associates                             12\n",
+       "Harris Poll                                         12\n",
+       "Cor Services, Inc.                                  10\n",
+       "CNN/SSRS                                             9\n",
+       "Fox News                                             8\n",
+       "Redfield & Wilton Strategies                         8\n",
+       "Trafalgar Group                                      6\n",
+       "Climate Nexus                                        6\n",
+       "NBC News                                             6\n",
+       "Civiqs                                               6\n",
+       "ABC News/The Washington Post                         6\n",
+       "John Zogby Strategies/EMI Research Solutions         4\n",
+       "GQR Research                                         4\n",
+       "Pew Research Center                                  4\n",
+       "The Winston Group                                    4\n",
+       "CNBC/Hart Research/Public Opinion Strategies         4\n",
+       "Hart Research Associates                             4\n",
+       "Zogby Analytics                                      4\n",
+       "SurveyMonkey                                         4\n",
+       "Emerson College                                      4\n",
+       "Momentive/SurveyMonkey                               2\n",
+       "Marquette Law School                                 2\n",
+       "Sacred Heart University                              2\n",
+       "Public Policy Polling                                2\n",
+       "GBAO                                                 2\n",
+       "Change Research                                      2\n",
+       "Saint Leo University                                 2\n",
+       "Susquehanna Polling & Research Inc.                  2\n",
+       "Suffolk University                                   2\n",
+       "Georgetown University/Battleground                   2\n",
+       "East Carolina University                             2\n",
+       "Public Opinion Strategies                            2\n",
+       "Research Co.                                         2\n",
+       "Name: pollster, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "biden['pollster'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "dda388f7",
    "metadata": {},
    "outputs": [
