Add additional analysis

--- a/Graphs.ipynb
+++ b/Graphs.ipynb
@@ -377,7 +377,9 @@
    "cell_type": "markdown",
    "id": "66c887ed",
    "metadata": {},
-   "source": []
+   "source": [
+    "Although this dataset only covers the year 2021, Donald Trump and the Republican party still dominate conversations on r/politics. On Reddit, \"/s\" is used at the end of comments to indicate that the remark is meant sarcastically--that \"s\" is also a frequent term used in all subreddits, indicating a high level of sarcasm in discussions."
+   ]
   },
   {
    "cell_type": "code",
@@ -433,7 +435,9 @@
    "cell_type": "markdown",
    "id": "17ac9520",
    "metadata": {},
-   "source": []
+   "source": [
+    "Donald Trump and the Republican party continue to be extremely frequent topics of conversation in left-leaning subreddits. Most other words that appear are largely generic, indicating that there isn't any specific topic or issue that's a frequent topic of conversation."
+   ]
   },
   {
    "cell_type": "code",
@@ -493,7 +497,9 @@
    "cell_type": "markdown",
    "id": "22028a17",
    "metadata": {},
-   "source": []
+   "source": [
+    "Interestingly, the word \"Republican\" is not used frequenlty in the right-leaning subreddits, despite being extremely frequent in others."
+   ]
   },
   {
    "cell_type": "code",
@@ -540,14 +546,6 @@
    "source": [
     "generate_wordcloud(libertarian_text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3af460ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
