Minor edits of analysis

--- a/Graphs.ipynb
+++ b/Graphs.ipynb
@@ -52,154 +52,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>author</th>\n",
-       "      <th>body</th>\n",
-       "      <th>created_utc</th>\n",
-       "      <th>permalink</th>\n",
-       "      <th>score</th>\n",
-       "      <th>subreddit</th>\n",
-       "      <th>total_awards_received</th>\n",
-       "      <th>editable</th>\n",
-       "      <th>Polarity</th>\n",
-       "      <th>Subjectivity</th>\n",
-       "      <th>Sentiment</th>\n",
-       "      <th>date</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>execdysfunction</td>\n",
-       "      <td>Maybe. We need to be aiming higher</td>\n",
-       "      <td>2021-04-03 19:41:59</td>\n",
-       "      <td>/r/politics/comments/mj839d/schumer_senate_wil...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>politics</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>Positive</td>\n",
-       "      <td>4/3/2021</td>\n",
-       "      <td>53.414394</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>yappledapple</td>\n",
-       "      <td>I hadn't heard that one. I think the ones stil...</td>\n",
-       "      <td>2021-04-03 19:41:59</td>\n",
-       "      <td>/r/politics/comments/mjcrfb/schumer_says_senat...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>politics</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.166667</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>Negative</td>\n",
-       "      <td>4/3/2021</td>\n",
-       "      <td>53.414394</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Tots4trump</td>\n",
-       "      <td>“The statue was presented to the British as a ...</td>\n",
-       "      <td>2021-04-03 19:41:56</td>\n",
-       "      <td>/r/politics/comments/mjczhl/confederate_symbol...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>politics</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.295000</td>\n",
-       "      <td>0.430000</td>\n",
-       "      <td>Positive</td>\n",
-       "      <td>4/3/2021</td>\n",
-       "      <td>53.414394</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>DroopyMcCool</td>\n",
-       "      <td>Is this something that is in the DOI's purview...</td>\n",
-       "      <td>2021-04-03 19:41:55</td>\n",
-       "      <td>/r/politics/comments/mj6klw/secretary_deb_haal...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>politics</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.068182</td>\n",
-       "      <td>0.227273</td>\n",
-       "      <td>Positive</td>\n",
-       "      <td>4/3/2021</td>\n",
-       "      <td>53.414394</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>FlyingRock</td>\n",
-       "      <td>New York legalizing is definitely why it's bei...</td>\n",
-       "      <td>2021-04-03 19:41:55</td>\n",
-       "      <td>/r/politics/comments/mj839d/schumer_senate_wil...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>politics</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.033939</td>\n",
-       "      <td>0.517576</td>\n",
-       "      <td>Positive</td>\n",
-       "      <td>4/3/2021</td>\n",
-       "      <td>53.414394</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            author                                               body  \\\n",
-       "0  execdysfunction                 Maybe. We need to be aiming higher   \n",
-       "1     yappledapple  I hadn't heard that one. I think the ones stil...   \n",
-       "2       Tots4trump  “The statue was presented to the British as a ...   \n",
-       "3     DroopyMcCool  Is this something that is in the DOI's purview...   \n",
-       "4       FlyingRock  New York legalizing is definitely why it's bei...   \n",
-       "\n",
-       "           created_utc                                          permalink  \\\n",
-       "0  2021-04-03 19:41:59  /r/politics/comments/mj839d/schumer_senate_wil...   \n",
-       "1  2021-04-03 19:41:59  /r/politics/comments/mjcrfb/schumer_says_senat...   \n",
-       "2  2021-04-03 19:41:56  /r/politics/comments/mjczhl/confederate_symbol...   \n",
-       "3  2021-04-03 19:41:55  /r/politics/comments/mj6klw/secretary_deb_haal...   \n",
-       "4  2021-04-03 19:41:55  /r/politics/comments/mj839d/schumer_senate_wil...   \n",
-       "\n",
-       "   score subreddit  total_awards_received  editable  Polarity  Subjectivity  \\\n",
-       "0      1  politics                      0       NaN  0.250000      0.500000   \n",
-       "1      1  politics                      0       NaN -0.166667      0.500000   \n",
-       "2      1  politics                      0       NaN  0.295000      0.430000   \n",
-       "3      1  politics                      0       NaN  0.068182      0.227273   \n",
-       "4      1  politics                      0       NaN  0.033939      0.517576   \n",
-       "\n",
-       "  Sentiment      date     target  \n",
-       "0  Positive  4/3/2021  53.414394  \n",
-       "1  Negative  4/3/2021  53.414394  \n",
-       "2  Positive  4/3/2021  53.414394  \n",
-       "3  Positive  4/3/2021  53.414394  \n",
-       "4  Positive  4/3/2021  53.414394  "
-      ]
+      "text/plain": "            author                                               body  \\\n0  execdysfunction                 Maybe. We need to be aiming higher   \n1     yappledapple  I hadn't heard that one. I think the ones stil...   \n2       Tots4trump  “The statue was presented to the British as a ...   \n3     DroopyMcCool  Is this something that is in the DOI's purview...   \n4       FlyingRock  New York legalizing is definitely why it's bei...   \n\n           created_utc                                          permalink  \\\n0  2021-04-03 19:41:59  /r/politics/comments/mj839d/schumer_senate_wil...   \n1  2021-04-03 19:41:59  /r/politics/comments/mjcrfb/schumer_says_senat...   \n2  2021-04-03 19:41:56  /r/politics/comments/mjczhl/confederate_symbol...   \n3  2021-04-03 19:41:55  /r/politics/comments/mj6klw/secretary_deb_haal...   \n4  2021-04-03 19:41:55  /r/politics/comments/mj839d/schumer_senate_wil...   \n\n   score subreddit  total_awards_received  editable  Polarity  Subjectivity  \\\n0      1  politics                      0       NaN  0.250000      0.500000   \n1      1  politics                      0       NaN -0.166667      0.500000   \n2      1  politics                      0       NaN  0.295000      0.430000   \n3      1  politics                      0       NaN  0.068182      0.227273   \n4      1  politics                      0       NaN  0.033939      0.517576   \n\n  Sentiment      date     target  \n0  Positive  4/3/2021  53.414394  \n1  Negative  4/3/2021  53.414394  \n2  Positive  4/3/2021  53.414394  \n3  Positive  4/3/2021  53.414394  \n4  Positive  4/3/2021  53.414394  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>author</th>\n      <th>body</th>\n      <th>created_utc</th>\n      <th>permalink</th>\n      <th>score</th>\n      <th>subreddit</th>\n      <th>total_awards_received</th>\n      <th>editable</th>\n      <th>Polarity</th>\n      <th>Subjectivity</th>\n      <th>Sentiment</th>\n      <th>date</th>\n      <th>target</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>execdysfunction</td>\n      <td>Maybe. We need to be aiming higher</td>\n      <td>2021-04-03 19:41:59</td>\n      <td>/r/politics/comments/mj839d/schumer_senate_wil...</td>\n      <td>1</td>\n      <td>politics</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>0.250000</td>\n      <td>0.500000</td>\n      <td>Positive</td>\n      <td>4/3/2021</td>\n      <td>53.414394</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>yappledapple</td>\n      <td>I hadn't heard that one. I think the ones stil...</td>\n      <td>2021-04-03 19:41:59</td>\n      <td>/r/politics/comments/mjcrfb/schumer_says_senat...</td>\n      <td>1</td>\n      <td>politics</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>-0.166667</td>\n      <td>0.500000</td>\n      <td>Negative</td>\n      <td>4/3/2021</td>\n      <td>53.414394</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Tots4trump</td>\n      <td>“The statue was presented to the British as a ...</td>\n      <td>2021-04-03 19:41:56</td>\n      <td>/r/politics/comments/mjczhl/confederate_symbol...</td>\n      <td>1</td>\n      <td>politics</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>0.295000</td>\n      <td>0.430000</td>\n      <td>Positive</td>\n      <td>4/3/2021</td>\n      <td>53.414394</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>DroopyMcCool</td>\n      <td>Is this something that is in the DOI's purview...</td>\n      <td>2021-04-03 19:41:55</td>\n      <td>/r/politics/comments/mj6klw/secretary_deb_haal...</td>\n      <td>1</td>\n      <td>politics</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>0.068182</td>\n      <td>0.227273</td>\n      <td>Positive</td>\n      <td>4/3/2021</td>\n      <td>53.414394</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>FlyingRock</td>\n      <td>New York legalizing is definitely why it's bei...</td>\n      <td>2021-04-03 19:41:55</td>\n      <td>/r/politics/comments/mj839d/schumer_senate_wil...</td>\n      <td>1</td>\n      <td>politics</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>0.033939</td>\n      <td>0.517576</td>\n      <td>Positive</td>\n      <td>4/3/2021</td>\n      <td>53.414394</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 3,
      "metadata": {},
